--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -1,13 +1,22 @@
+# define group app
 upstream app {
+  # balancing by ip
   ip_hash;
+
+  # define server app
   server app:8000;
 }
 
 # portal
 server {
+  # all requests proxies to app
   location / {
         proxy_pass http://app/;
     }
+
+  # only respond to port 8000
   listen 8000;
+
+  # domain localhost
   server_name localhost;
 }
