serve static files

--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -9,10 +9,16 @@ upstream app {
 
 # portal
 server {
-  # all requests proxies to app
+  # serve static files directly
+  location /static/ {
+    alias /srv/static/;
+    autoindex off;
+  }
+
+  # all other requests proxies to app
   location / {
-        proxy_pass http://app/;
-    }
+    proxy_pass http://app/;
+  }
 
   # only respond to port 8000
   listen 8000;
